--- a/config/content.htm
+++ b/config/content.htm
@@ -52,7 +52,11 @@
 <p><span><img alt="" height="300" src="/images/IMG_4021.JPG" width="400"/></span></p>
 <p><span>IPv6下的<span>Port號設定參考</span></span></p>
 <p><span><span>注意客端IP必須與電腦網路連線IP一致才可連接</span></span></p>
-<h1>課堂筆記</h1>
+<h4><strong>cmsimde</strong></h4>
+<p>1.如何更新<span>submodule下的</span>子模組</p>
+<p>2.<span>如何將submodule下的子模組刪除</span></p>
+<hr/><hr/>
+<p></p><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
