--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -52,7 +52,9 @@
 <p><span><img alt="" height="300" src="/images/IMG_4021.JPG" width="400"/></span></p>
 <p><span>IPv6下的<span>Port號設定參考</span></span></p>
 <p><span><span>注意客端IP必須與電腦網路連線IP一致才可連接</span></span></p>
-<h1>課堂筆記</h1>
+<h4><strong>cmsimde</strong></h4>
+<p>1.如何更新<span>submodule下的</span>子模組</p>
+<p>2.<span>如何將submodule下的子模組刪除</span></p><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
@@ -135,6 +137,7 @@
 <p><span>5.git rm --cached cmsimde 刪除cmsimde</span></p>
 <p><span>操作影片:</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PPZ3KhAx33s" width="500"></iframe></span></p>
+<p><span>參考資料:<a href="https://blog.csdn.net/guotianqing/article/details/82391665">https://blog.csdn.net/guotianqing/article/details/82391665</a></span></p>
 <hr/><hr/>
 <p></p><h1>Assignment</h1>
 <h2>Assignment 1</h2>
