--- a/content/week.html
+++ b/content/week.html
@@ -201,7 +201,11 @@ img.add_border {
 <p><span><img alt="" height="300" src="./../images/IMG_4021.JPG" width="400"/></span></p>
 <p><span>IPv6下的<span>Port號設定參考</span></span></p>
 <p><span><span>注意客端IP必須與電腦網路連線IP一致才可連接</span></span></p>
-<br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
+<h4><strong>cmsimde</strong></h4>
+<p>1.如何更新<span>submodule下的</span>子模組</p>
+<p>2.<span>如何將submodule下的子模組刪除</span></p>
+<hr/><hr/>
+<p></p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
         
     <!-- footer -->
       <div class="container">
