--- a/content/Ubuntu 20.04 Virtualbox.html
+++ b/content/Ubuntu 20.04 Virtualbox.html
@@ -154,14 +154,53 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Remote API << <a href='Remote API.html'>Previous</a> <a href='Ubuntu 20.04 Virtualbox.html'>Next</a> >> Ubuntu 20.04 Virtualbox<br /><h1>Google + Domain API</h1>
-<p><b></b>參考<a href="http://mde.tw/cd2020pj1/content/CMS.html">http://mde.tw/cd2020pj1/content/CMS.html</a>中的</p>
-<p>Google + Domain API 導入</p>
-<p><span>OAuth 2.0  設定</span></p>
-<p><span><img alt="" height="391" src="./../images/未命名.png" width="337"/></span></p>
-<p>操作影片:</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZVEqJiweTdk" width="400"></iframe></p>
-<br />Remote API << <a href='Remote API.html'>Previous</a> <a href='Ubuntu 20.04 Virtualbox.html'>Next</a> >> Ubuntu 20.04 Virtualbox</div>
+    <div id="tipue_search_content">Google + Domain API << <a href='Google + Domain API.html'>Previous</a> <br /><h1>Ubuntu 20.04 Virtualbox</h1>
+<h4>在Virtualbox中的網路設定以及<span>Port號設定</span></h4>
+<p><strong>1.設定網路連線</strong></p>
+<p><span>至/etc/netplan目錄下新建00-installer-config.yaml檔案</span></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">cd /etc/netplan
+sudo vi 00-installer-config.yaml</pre>
+<p><span>當中內容如下:</span></p>
+<p><span><img alt="" height="291" src="./../images/VirtualBox_2020-06-03_12-28-05.png" width="400"/></span></p>
+<p>將對應為IPv6下的狀態</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">	
+sudo netplan apply</pre>
+<p><span></span>完成後需進行更新</p>
+<p>至<span>/etc/apt/apt.conf.d 目錄下新增proxy.conf設定檔案</span></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">cd /etc/apt/apt.conf.d
+sudo vi proxy.conf</pre>
+<p><span>當中內容如下:</span></p>
+<p><span><img alt="" height="269" src="./../images/VirtualBox_2020-06-03_12-27-43.png" width="400"/></span></p>
+<p><span>需對應電腦所連結之proxy號</span></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">sudo apt update</pre>
+<p>更新apt的內容<br/><br/></p>
+<p><strong>2.Virtualbox中的Port號設定</strong></p>
+<p>IPv4下的Port號設定</p>
+<p><img alt="" height="364" src="./../images/VirtualBox_2020-06-03_12-26-56.png" width="0500"/></p>
+<p>19999為CoppeliaSim對應的RemoteAPI</p>
+<p><span></span>22為對外Putty的設定</p>
+<p>7443、9443 為網站對應port號</p>
+<p>IPv6下的Port號設定</p>
+<p><img alt="" height="364" src="./../images/VirtualBox_2020-06-03_12-27-02.png" width="500"/></p>
+<p>注意客端IP位置需對應在ifconfig中查詢到的號碼對應</p>
+<p><span>ifconfig的運用可參考<a href="https://s40723147.github.io/cd2020/content/week.html">對應連結</a>中的week13</span></p>
+<p><strong>3.開啟虛擬主機中的cd2020pj1對應網站</strong></p>
+<p><span>進入目錄/tmp/cd2020pj1/docs/cmsimde中的wsgi.py檔案</span></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">cd tmp/cd2020pj1/docs/cmsimde
+vi wsgi.py</pre>
+<p>更改其內容的host號碼</p>
+<p><img caption="false" height="364" src="./../images/VirtualBox_2020-06-03_12-26-34.png" width="500"/></p>
+<p>完成後可輸入</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">python3 wsgi.py</pre>
+<p>來啟動對應的網站</p>
+<p><img alt="" height="336" src="./../images/VirtualBox_2020-06-03_12-26-09.png" width="500"/></p>
+<p>取到對應連結後進入虛擬主機的Firefox開啟連結完成內部連線</p>
+<p><img alt="" height="364" src="./../images/VirtualBox_2020-06-03_12-25-44.png" width="500"/></p>
+<p>外部開啟連結為</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">https://[2001:288:6004:17:2020:1::7147]:19443</pre>
+<p>為當初之設定port號有所對應</p>
+<p><img alt="" height="271" src="./../images/chrome_2020-06-03_12-24-28.png" width="500"/></p>
+<p>不過無法連接需要再加以研究</p></div></div></div><br />Google + Domain API << <a href='Google + Domain API.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
