--- a/content/cmsimde.html
+++ b/content/cmsimde.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a><li><a href='Ubuntu 20.04 Virtualbox.html'>Ubuntu 20.04 Virtualbox</a></li>
                       </ul>
                 </nav>
               </div>
@@ -177,7 +177,8 @@ img.add_border {
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PPZ3KhAx33s" width="500"></iframe></span></p>
 <p><span>參考資料:<a href="https://blog.csdn.net/guotianqing/article/details/82391665">https://blog.csdn.net/guotianqing/article/details/82391665</a></span></p>
 <hr/><hr/>
-<p></p><br />課堂筆記 << <a href='課堂筆記.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment</div>
+<p></p>
+<br />課堂筆記 << <a href='課堂筆記.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment</div>
         
     <!-- footer -->
       <div class="container">
