--- a/content/week.html
+++ b/content/week.html
@@ -205,8 +205,15 @@ img.add_border {
 <p>1.如何更新<span>submodule下的</span>子模組</p>
 <p>2.<span>如何將submodule下的子模組刪除</span></p>
 <hr/><hr/>
-<p></p>
-<br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week14</strong></span></h4>
+<h4>VirtualBox的網路與port號設定</h4>
+<p><span style="color: #000000;">1.設定網路連線</span></p>
+<p><span style="color: #000000;"><br/>2.Virtualbox中的Port號設定</span></p>
+<p><span style="color: #000000;"><br/>3.開啟虛擬主機中的cd2020pj1對應網站</span></p>
+<p><span style="color: #000000;">對應連結:</span></p>
+<p><span style="color: #000000;"><a href="https://s40723147.github.io/cd2020/content/Ubuntu%2020.04%20Virtualbox.html">https://s40723147.github.io/cd2020/content/Ubuntu%2020.04%20Virtualbox.html</a></span></p>
+<hr/><hr/>
+<p></p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
         
     <!-- footer -->
       <div class="container">
