--- a/config/content.htm
+++ b/config/content.htm
@@ -56,8 +56,15 @@
 <p>1.如何更新<span>submodule下的</span>子模組</p>
 <p>2.<span>如何將submodule下的子模組刪除</span></p>
 <hr/><hr/>
-<p></p>
-<h1>課堂筆記</h1>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week14</strong></span></h4>
+<h4>VirtualBox的網路與port號設定</h4>
+<p><span style="color: #000000;">1.設定網路連線</span></p>
+<p><span style="color: #000000;"><br/>2.Virtualbox中的Port號設定</span></p>
+<p><span style="color: #000000;"><br/>3.開啟虛擬主機中的cd2020pj1對應網站</span></p>
+<p><span style="color: #000000;">對應連結:</span></p>
+<p><span style="color: #000000;"><a href="https://s40723147.github.io/cd2020/content/Ubuntu%2020.04%20Virtualbox.html">https://s40723147.github.io/cd2020/content/Ubuntu%2020.04%20Virtualbox.html</a></span></p>
+<hr/><hr/>
+<p></p><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
