--- a/content/問題解決.html
+++ b/content/問題解決.html
@@ -154,14 +154,25 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='week.html'>Next</a> >> week<br /><h1>簡介</h1>
-<p>github:<a href="https://github.com/s40723147/cd2020">https://github.com/s40723147/cd2020</a></p>
-<p>blog:<a href="https://s40723147.github.io/cd2020/blog/index.html">https://s40723147.github.io/cd2020/blog/index.html</a></p>
-<p>reveal:<a href="https://s40723147.github.io/cd2020/reveal/index.html#/">https://s40723147.github.io/cd2020/reveal/index.html#/</a></p>
-<p>youtube:<a href="https://www.youtube.com/channel/UCCsh_1xCiVRhiKTEWxbyVyg?view_as=subscriber">https://www.youtube.com/channel/UCCsh_1xCiVRhiKTEWxbyVyg?view_as=subscriber</a></p>
-<p>cd2020ag2:<a href="https://github.com/s40723150/cd2020ag2">https://github.com/s40723150/cd2020ag2</a></p>
-<p>cd2020ag2 page:<a href="https://s40723150.github.io/cd2020ag2/content/index.html">https://s40723150.github.io/cd2020ag2/content/index.html</a></p>
-<br /> <a href='week.html'>Next</a> >> week</div>
+    <div id="tipue_search_content">Ubuntu 20.04 Virtualbox << <a href='Ubuntu 20.04 Virtualbox.html'>Previous</a> <br /><h1>問題解決</h1>
+<p>解決外部無法連結之問題</p>
+<p>在上堂課中遇到了外部無法連結之問題</p>
+<p>本周進行問題分析探討</p>
+<p>1.進入VirtualBox→檔案<span>→偏好設定→設定Port號</span></p>
+<p><span><img alt="" height="272" src="./../images/VirtualBox_2020-06-10_11-26-01.png" width="400"/></span></p>
+<p><img alt="" height="366" src="./../images/VirtualBox_2020-06-10_11-25-42.png" width="400"/></p>
+<p><img alt="" height="325" src="./../images/VirtualBox_2020-06-10_11-24-31.png" width="500"/></p>
+<p>確認主體IP 也就是外部的連結設定</p>
+<p>上周因將主體IP 設為</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">2001:288:6004:17:2020:0:1:7147</pre>
+<p>故無法開啟連結</p>
+<p>對應的主體IP設定錯誤 0 ， 1 位置需對調</p>
+<p>2.檢查電腦的IPv6網路設定</p>
+<p><img alt="" height="411" src="./../images/dllhost_2020-06-10_11-28-50.png" width="500"/></p>
+<p>3.檢查內部是否可以連結上</p>
+<p><img alt="" height="294" src="./../images/VirtualBox_2020-06-10_11-25-33.png" width="500"/></p>
+<p>4.再次檢查外部是否可以連結</p>
+<p><img alt="" height="271" src="./../images/chrome_2020-06-10_11-23-14.png" width="500"/></p></div></div></div><br />Ubuntu 20.04 Virtualbox << <a href='Ubuntu 20.04 Virtualbox.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
