--- a/content/Ubuntu 20.04 Virtualbox.html
+++ b/content/Ubuntu 20.04 Virtualbox.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a><li><a href='Ubuntu 20.04 Virtualbox.html'>Ubuntu 20.04 Virtualbox</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a><li class='has-children'><a href='Ubuntu 20.04 Virtualbox.html'>Ubuntu 20.04 Virtualbox</a><ul class='dropdown'><li><a href='問題解決.html'>問題解決</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Google + Domain API << <a href='Google + Domain API.html'>Previous</a> <br /><h1>Ubuntu 20.04 Virtualbox</h1>
+    <div id="tipue_search_content">Google + Domain API << <a href='Google + Domain API.html'>Previous</a> <a href='問題解決.html'>Next</a> >> 問題解決<br /><h1>Ubuntu 20.04 Virtualbox</h1>
 <h4>在Virtualbox中的網路設定以及<span>Port號設定</span></h4>
 <p><strong>1.設定網路連線</strong></p>
 <p><span>至/etc/netplan目錄下新建00-installer-config.yaml檔案</span></p>
@@ -200,7 +200,8 @@ vi wsgi.py</pre>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">https://[2001:288:6004:17:2020:1::7147]:19443</pre>
 <p>為當初之設定port號有所對應</p>
 <p><img alt="" height="271" src="./../images/chrome_2020-06-03_12-24-28.png" width="500"/></p>
-<p>不過無法連接需要再加以研究</p></div></div></div><br />Google + Domain API << <a href='Google + Domain API.html'>Previous</a> </div>
+<p>不過無法連接需要再加以研究</p>
+<br />Google + Domain API << <a href='Google + Domain API.html'>Previous</a> <a href='問題解決.html'>Next</a> >> 問題解決</div>
         
     <!-- footer -->
       <div class="container">
