--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -454,7 +454,7 @@ vi wsgi.py</pre>
 <p>在上堂課中遇到了外部無法連結之問題</p>
 <p>本周進行問題分析探討</p>
 <p>1.進入VirtualBox→檔案<span>→偏好設定→設定Port號</span></p>
-<p><span><img alt="" height="272" src="/images/InkedVirtualBox_2020-06-10_11-26-01_LI.jpg" width="400"/></span></p>
+<p><span><img alt="" height="272" src="/images/VirtualBox_2020-06-10_11-26-01.png" width="400"/></span></p>
 <p><img alt="" height="366" src="/images/VirtualBox_2020-06-10_11-25-42.png" width="400"/></p>
 <p><img alt="" height="325" src="/images/VirtualBox_2020-06-10_11-24-31.png" width="500"/></p>
 <p>確認主體IP 也就是外部的連結設定</p>
