--- a/content/week.html
+++ b/content/week.html
@@ -213,7 +213,17 @@ img.add_border {
 <p><span style="color: #000000;">對應連結:</span></p>
 <p><span style="color: #000000;"><a href="https://s40723147.github.io/cd2020/content/Ubuntu%2020.04%20Virtualbox.html">https://s40723147.github.io/cd2020/content/Ubuntu%2020.04%20Virtualbox.html</a></span></p>
 <hr/><hr/>
-<p></p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week15</strong></span></h4>
+<h4>VirtualBox的網路與port號設定</h4>
+<h4>(二)虛擬主機與外部連結</h4>
+<p>嘗試進行了解上週無法使外部連結至虛擬主機之問題</p>
+<p>解決問題如下:</p>
+<p>1.port號設定的對應IP設定錯誤</p>
+<p>2.檢查各項設定是否正常</p>
+<p>3.成功使內外連結 可遠端進行編輯</p>
+<hr/><hr/>
+<p></p>
+<p><span style="background-color: #99cc00; color: #000000;"></span></p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
         
     <!-- footer -->
       <div class="container">
