add 期末影片 W16紀錄

--- a/config/content.htm
+++ b/config/content.htm
@@ -74,7 +74,9 @@
 <p>3.成功使內外連結 可遠端進行編輯</p>
 <hr/><hr/>
 <p></p>
-<p><span style="background-color: #99cc00; color: #000000;"></span></p><h1>課堂筆記</h1>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week16</strong></span></h4>
+<p><span style="background-color: #99cc00; color: #000000;"></span>期末簡報製作，期末報告影片錄製‧</p>
+<p>學習重點整理</p><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
@@ -477,4 +479,8 @@ vi wsgi.py</pre>
 <p>3.檢查內部是否可以連結上</p>
 <p><img alt="" height="294" src="/images/VirtualBox_2020-06-10_11-25-33.png" width="500"/></p>
 <p>4.再次檢查外部是否可以連結</p>
-<p><img alt="" height="271" src="/images/chrome_2020-06-10_11-23-14.png" width="500"/></p></div></div></div>
+<p><img alt="" height="271" src="/images/chrome_2020-06-10_11-23-14.png" width="500"/></p>
+<h1>期末報告</h1>
+<p>期末成果影片展示</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/V1RWQjCkLT0" width="560"></iframe></p>
+<p>紀錄40723147在CD2020 <yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">協同產品設計實習的所學</yt-formatted-string></p></div></div></div>
