--- a/content/問題解決.html
+++ b/content/問題解決.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>CMSiMDE</title>
+        <title>40723147</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a><li class='has-children'><a href='Ubuntu 20.04 Virtualbox.html'>Ubuntu 20.04 Virtualbox</a><ul class='dropdown'><li><a href='問題解決.html'>問題解決</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a><li class='has-children'><a href='Ubuntu 20.04 Virtualbox.html'>Ubuntu 20.04 Virtualbox</a><ul class='dropdown'><li><a href='問題解決.html'>問題解決</a></li></li></ul></ul><li><a href='期末報告.html'>期末報告</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Ubuntu 20.04 Virtualbox << <a href='Ubuntu 20.04 Virtualbox.html'>Previous</a> <br /><h1>問題解決</h1>
+    <div id="tipue_search_content">Ubuntu 20.04 Virtualbox << <a href='Ubuntu 20.04 Virtualbox.html'>Previous</a> <a href='期末報告.html'>Next</a> >> 期末報告<br /><h1>問題解決</h1>
 <p>解決外部無法連結之問題</p>
 <p>在上堂課中遇到了外部無法連結之問題</p>
 <p>本周進行問題分析探討</p>
@@ -172,7 +172,8 @@ img.add_border {
 <p>3.檢查內部是否可以連結上</p>
 <p><img alt="" height="294" src="./../images/VirtualBox_2020-06-10_11-25-33.png" width="500"/></p>
 <p>4.再次檢查外部是否可以連結</p>
-<p><img alt="" height="271" src="./../images/chrome_2020-06-10_11-23-14.png" width="500"/></p></div></div></div><br />Ubuntu 20.04 Virtualbox << <a href='Ubuntu 20.04 Virtualbox.html'>Previous</a> </div>
+<p><img alt="" height="271" src="./../images/chrome_2020-06-10_11-23-14.png" width="500"/></p>
+<br />Ubuntu 20.04 Virtualbox << <a href='Ubuntu 20.04 Virtualbox.html'>Previous</a> <a href='期末報告.html'>Next</a> >> 期末報告</div>
         
     <!-- footer -->
       <div class="container">
