--- a/content/期末報告.html
+++ b/content/期末報告.html
@@ -154,37 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">CoppeliaSim << <a href='CoppeliaSim.html'>Previous</a> <a href='Google + Domain API.html'>Next</a> >> Google + Domain API<br /><h1>Remote API</h1>
-<h4><strong><span style="background-color: #ffff00;"> CoppeliaSim </span><span style="background-color: #99cc00; color: #000000;">下的 Remote API 設定</span></strong></h4>
-<table class="subsectionTable" height="49" style="width: 531.8px;">
-<tbody>
-<tr class="subsectionTd">
-<td class="subsectionTd" style="width: 529.8px;">Python client</td>
-</tr>
-</tbody>
-</table>
-<hr/>
-<p>Python 用戶使用<span style="background-color: #ffff00;"> CoppeliaSim </span>下的 Remote API 需先檢查以下內容:</p>
-<hr/>
-<p>To use the remote API functionality in your Python script, you will need following 3 items:</p>
-<hr/>
-<pre class="tw-data-text tw-text-large XcVN5d tw-ta" data-placeholder="翻譯" dir="ltr" id="tw-target-text"><span lang="zh-TW">要在你的 Python <span>script </span>中使用<span> remote </span>API 功能，你將需要以下三項：</span></pre>
-<hr/>
-<p><b></b></p>
-<ul>
-<li><b>sim.py</b></li>
-<li><b>simConst.py</b></li>
-<li><b>remoteApi.dll, remoteApi.dylib or remoteApi.so (depending on your target platform)</b></li>
-</ul>
-<hr/>
-<p>Above files are located in CoppeliaSim's installation directory, under<span> </span><em>programming/remoteApiBindings/python</em>. You might have to build the remoteApi shared library yourself (using<span> </span><em>remoteApiSharedLib.vcproj</em><span> </span>or<span> </span><em>makefile</em>) if not already built. In that case, make sure you have defined<span> </span><strong>NON_MATLAB_PARSING</strong><span> </span>and<span> </span><strong>MAX_EXT_API_CONNECTIONS=255<span> </span></strong>(and optionally<span> </span><strong><strong>DO_NOT_USE_SHARED_MEMORY</strong></strong>) as a preprocessor definition.</p>
-<hr/>
-<p><span>上面的文件位於CoppeliaSim的安裝目錄下，位於</span><em><span><span>programming / remoteApiBindings / python下</span></span></em><span><span>。</span><span>如果尚未</span><span>構建remoteApi共享庫，則可能必須自己構建（使用</span></span><em><span><span>remoteApiSharedLib.vcproj</span></span></em><span><span>或</span></span><em><span><span>makefile</span></span></em><span><span>）。</span><span>在這種情況下，請確保已將</span></span><strong><span><span>NON_MATLAB_PARSING</span></span></strong><span><span>和</span></span><strong><span><span>MAX_EXT_API_CONNECTIONS = 255</span></span></strong><span><span>（以及可選的</span></span><strong><strong><span><span>DO_NOT_USE_SHARED_MEMORY</span></span></strong></strong><span><span>）定義為預處理器定義。</span></span></p>
-<hr/>
-<p>Once you have above elements in a directory known to Python, call<span> </span><em>import sim</em><span> </span>to load the library. To enable the remote API on the client side (i.e. your application), call<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm#simxStart"><em>sim.simxStart</em></a>. See the<span> </span><em>simpleTest.py</em><span> </span>script in the<span> </span><em>programming/remoteApiBindings/python</em><span> </span>directory for an example.<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm">This page</a><span> </span>lists and describes all supported Python remote API functions. CoppeliaSim remote API functions can easily be recognized from their "simx"-prefix.</p>
-<hr/>
-<p><span>將以上元素放在Python已知的目錄中後，請調用</span><em><span><span>import sim</span></span></em><span><span>加載庫。</span><span>要在客戶端（即您的應用程序）上啟用遠程API，請調用</span></span><em><span><span>sim.simxStart</span></span></em><span><span>。</span><span>有關</span></span><em><span><span>示例</span></span></em><span><span>，</span><span>請參見</span></span><em><span><span>programming / remoteApiBindings / python</span></span></em><span><span>目錄中</span><span>的</span><em><span>simpleTest.py</span></em><span>腳本</span><span>。</span></span><a href="https://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm"><span><span>本頁</span></span></a><span><span>列出並描述了所有受支持的Python遠程API函數。</span><span>CoppeliaSim遠程API函數可以從其“ simx”前綴輕鬆識別。</span></span></p>
-<br />CoppeliaSim << <a href='CoppeliaSim.html'>Previous</a> <a href='Google + Domain API.html'>Next</a> >> Google + Domain API</div>
+    <div id="tipue_search_content">問題解決 << <a href='問題解決.html'>Previous</a> <br /><h1>期末報告</h1>
+<p>期末成果影片展示</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/V1RWQjCkLT0" width="560"></iframe></p>
+<p>紀錄40723147在CD2020 <yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">協同產品設計實習的所學</yt-formatted-string></p></div></div></div><br />問題解決 << <a href='問題解決.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
