--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -64,7 +64,19 @@
 <p><span style="color: #000000;">對應連結:</span></p>
 <p><span style="color: #000000;"><a href="https://s40723147.github.io/cd2020/content/Ubuntu%2020.04%20Virtualbox.html">https://s40723147.github.io/cd2020/content/Ubuntu%2020.04%20Virtualbox.html</a></span></p>
 <hr/><hr/>
-<p></p><h1>課堂筆記</h1>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week15</strong></span></h4>
+<h4>VirtualBox的網路與port號設定</h4>
+<h4>(二)虛擬主機與外部連結</h4>
+<p>嘗試進行了解上週無法使外部連結至虛擬主機之問題</p>
+<p>解決問題如下:</p>
+<p>1.port號設定的對應IP設定錯誤</p>
+<p>2.檢查各項設定是否正常</p>
+<p>3.成功使內外連結 可遠端進行編輯</p>
+<hr/><hr/>
+<p></p>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week16</strong></span></h4>
+<p><span style="background-color: #99cc00; color: #000000;"></span>期末簡報製作，期末報告影片錄製‧</p>
+<p>學習重點整理</p><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
@@ -467,4 +479,8 @@ vi wsgi.py</pre>
 <p>3.檢查內部是否可以連結上</p>
 <p><img alt="" height="294" src="/images/VirtualBox_2020-06-10_11-25-33.png" width="500"/></p>
 <p>4.再次檢查外部是否可以連結</p>
-<p><img alt="" height="271" src="/images/chrome_2020-06-10_11-23-14.png" width="500"/></p></div></div></div>
+<p><img alt="" height="271" src="/images/chrome_2020-06-10_11-23-14.png" width="500"/></p>
+<h1>期末報告</h1>
+<p>期末成果影片展示</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/V1RWQjCkLT0" width="560"></iframe></p>
+<p>紀錄40723147在CD2020 <yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">協同產品設計實習的所學</yt-formatted-string></p></div></div></div>
