--- a/content/Mechatronic Project.html
+++ b/content/Mechatronic Project.html
@@ -154,31 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">課堂筆記 << <a href='課堂筆記.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment<br /><h1>cmsimde</h1>
-<p>如何更新子模組</p>
-<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">更新submodule下的子模組</yt-formatted-string></p>
-<p><span>運用到的指令包刮</span></p>
-<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">git submodule init</pre>
-<p></p>
-<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">git submodule update</pre>
-<p></p>
-<p><span>目的是為了更新倉儲中缺失的submodule狀態下的子模組</span></p>
-<p><span>操作影片:</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/AXbY-toPl9Q" width="500"></iframe></span></p>
-<hr/><hr/>
-<p><span>如何將submodule下的子模組刪除</span></p>
-<p><span>刪除子模組 </span></p>
-<p><span>1.刪除子模組目錄下全部檔案 </span></p>
-<p><span>2.刪除目錄中.gitmodules中的子模組相關條件 </span></p>
-<p><span>3.刪除.git/config中子模組的相關條件</span></p>
-<p><span> 4.刪除.git/module中的子模組目錄 只需刪掉要刪掉的那個目錄 </span></p>
-<p><span>5.git rm --cached cmsimde 刪除cmsimde</span></p>
-<p><span>操作影片:</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PPZ3KhAx33s" width="500"></iframe></span></p>
-<p><span>參考資料:<a href="https://blog.csdn.net/guotianqing/article/details/82391665">https://blog.csdn.net/guotianqing/article/details/82391665</a></span></p>
-<hr/><hr/>
-<p></p>
-<br />課堂筆記 << <a href='課堂筆記.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment</div>
+    <div id="tipue_search_content">Assignment 2 << <a href='Assignment 2.html'>Previous</a> <a href='onshape.html'>Next</a> >> onshape<br /><h1>Mechatronic Project</h1>
+<p>四輪小車模型匯出連結:<strong><a href="https://meet.google.com/linkredirect?authuser=0&amp;dest=https%3A%2F%2Fcad.onshape.com%2Fdocuments%2Fe3eb0b663356e543ec6baaaf%2Fw%2Fa4c0716868b2978a27b12ee4%2Fe%2F92badca8de429b497d1e9f01">四輪車模型</a></strong></p>
+<p>可匯出提供參考</p>
+<br />Assignment 2 << <a href='Assignment 2.html'>Previous</a> <a href='onshape.html'>Next</a> >> onshape</div>
         
     <!-- footer -->
       <div class="container">
