--- a/content/第二版車殼.html
+++ b/content/第二版車殼.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a><li class='has-children'><a href='Ubuntu 20.04 Virtualbox.html'>Ubuntu 20.04 Virtualbox</a><ul class='dropdown'><li><a href='問題解決.html'>問題解決</a></li></li></ul></ul><li><a href='期末報告.html'>期末報告</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Mechatronic Project.html'>Mechatronic Project</a><ul class='dropdown'><li class='has-children'><a href='onshape.html'>onshape</a><ul class='dropdown'><li><a href='第二版車殼.html'>第二版車殼</a></li></ul><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a><li class='has-children'><a href='Ubuntu 20.04 Virtualbox.html'>Ubuntu 20.04 Virtualbox</a><ul class='dropdown'><li><a href='問題解決.html'>問題解決</a></li></li></ul></ul><li><a href='期末報告.html'>期末報告</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,10 +154,41 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Assignment 2 << <a href='Assignment 2.html'>Previous</a> <a href='onshape.html'>Next</a> >> onshape<br /><h1>Project One</h1>
-<p>四輪小車模型匯出連結:<strong><a href="https://meet.google.com/linkredirect?authuser=0&amp;dest=https%3A%2F%2Fcad.onshape.com%2Fdocuments%2Fe3eb0b663356e543ec6baaaf%2Fw%2Fa4c0716868b2978a27b12ee4%2Fe%2F92badca8de429b497d1e9f01">四輪車模型</a></strong></p>
-<p>可匯出提供參考</p>
-<br />Assignment 2 << <a href='Assignment 2.html'>Previous</a> <a href='onshape.html'>Next</a> >> onshape</div>
+    <div id="tipue_search_content">onshape << <a href='onshape.html'>Previous</a> <a href='CoppeliaSim.html'>Next</a> >> CoppeliaSim<br /><h1>第二版車殼</h1>
+<p>經由第一次設計的車殼後，</p>
+<p>我們得到了一個結果，</p>
+<p>可以藉由已經完成的四輪越野車來修改其外觀及配備，</p>
+<p>所以有了第二次模型的設計‧</p>
+<p><img alt="" height="442" src="./../images/13.可當底.png" width="800"/></p>
+<p>設計流程:</p>
+<p>1.設計模型最大限度</p>
+<p><img alt="" height="196" src="./../images/3.車本體最大限度.png" width="400"/></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">長:0.84502000公尺
+寬:0.31258000公尺
+高:0.22972000公尺
+</pre>
+<p>2.定義外觀流線形</p>
+<p><img alt="" height="200" src="./../images/4.車流線型初步構思.png" width="400"/></p>
+<p>3.圓角導入</p>
+<p><img alt="" height="196" src="./../images/5.將各部位導入不同圓角.png" width="400"/></p>
+<p>4.加入尾部空力尾翼</p>
+<p><img alt="" height="197" src="./../images/6.尾翼導入.png" width="400"/></p>
+<p>5.圓角導入</p>
+<p><img alt="" height="196" src="./../images/7.將尾翼倒圓角.png" width="400"/></p>
+<p>6.將尾翼挖個洞升級空力套件</p>
+<p><img alt="" height="195" src="./../images/8.加入空力套件.png" width="400"/></p>
+<p>7.倒入圓角</p>
+<p><img alt="" height="196" src="./../images/9.圓角修飾.png" width="400"/></p>
+<p>8.薄殼車殼本體</p>
+<p><img alt="" height="196" src="./../images/10.薄殼倒入.png" width="400"/></p>
+<p>9.鯊魚鰭加入</p>
+<p><img alt="" height="196" src="./../images/11.加入鯊魚鰭設計.png" width="400"/></p>
+<p>10.確認兩輪軸位置</p>
+<p><img alt="" height="196" src="./../images/12.1車軸間距.png" width="400"/></p>
+<p>11.將兩個輪胎挖出來</p>
+<p><img alt="" height="195" src="./../images/12.挖出車輪位置.png" width="400"/></p>
+<p>12.完成圖</p>
+<p><img alt="" height="196" src="./../images/2.車殼整體外觀.png" width="400"/></p><br />onshape << <a href='onshape.html'>Previous</a> <a href='CoppeliaSim.html'>Next</a> >> CoppeliaSim</div>
         
     <!-- footer -->
       <div class="container">
