--- a/content/CoppeliaSim.html
+++ b/content/CoppeliaSim.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a><li class='has-children'><a href='Ubuntu 20.04 Virtualbox.html'>Ubuntu 20.04 Virtualbox</a><ul class='dropdown'><li><a href='問題解決.html'>問題解決</a></li></li></ul></ul><li><a href='期末報告.html'>期末報告</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Mechatronic Project.html'>Mechatronic Project</a><ul class='dropdown'><li class='has-children'><a href='onshape.html'>onshape</a><ul class='dropdown'><li><a href='第二版車殼.html'>第二版車殼</a></li></ul><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a><li class='has-children'><a href='Ubuntu 20.04 Virtualbox.html'>Ubuntu 20.04 Virtualbox</a><ul class='dropdown'><li><a href='問題解決.html'>問題解決</a></li></li></ul></ul><li><a href='期末報告.html'>期末報告</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">onshape << <a href='onshape.html'>Previous</a> <a href='Remote API.html'>Next</a> >> Remote API<br /><h1>CoppeliaSim</h1>
+    <div id="tipue_search_content">第二版車殼 << <a href='第二版車殼.html'>Previous</a> <a href='Remote API.html'>Next</a> >> Remote API<br /><h1>CoppeliaSim</h1>
 <h4><strong>1.匯入模型</strong></h4>
 <p><strong><img alt="" height="322" src="./../images/主目錄.jpg" width="400"/></strong></p>
 <p>首先先到主目錄下點取 File 會出現以下畫面</p>
@@ -164,7 +164,7 @@ img.add_border {
 <p>選好後按開啟便可以導入模型</p>
 <p><b>操作影片參考:</b></p>
 <p><b><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mg_syxl1w64" width="560"></iframe></b></p>
-<br />onshape << <a href='onshape.html'>Previous</a> <a href='Remote API.html'>Next</a> >> Remote API</div>
+<br />第二版車殼 << <a href='第二版車殼.html'>Previous</a> <a href='Remote API.html'>Next</a> >> Remote API</div>
         
     <!-- footer -->
       <div class="container">
