--- a/content/week.html
+++ b/content/week.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a><li class='has-children'><a href='Ubuntu 20.04 Virtualbox.html'>Ubuntu 20.04 Virtualbox</a><ul class='dropdown'><li><a href='問題解決.html'>問題解決</a></li></li></ul></ul><li><a href='期末報告.html'>期末報告</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Mechatronic Project.html'>Mechatronic Project</a><ul class='dropdown'><li class='has-children'><a href='onshape.html'>onshape</a><ul class='dropdown'><li><a href='第二版車殼.html'>第二版車殼</a></li></ul><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a><li class='has-children'><a href='Ubuntu 20.04 Virtualbox.html'>Ubuntu 20.04 Virtualbox</a><ul class='dropdown'><li><a href='問題解決.html'>問題解決</a></li></li></ul></ul><li><a href='期末報告.html'>期末報告</a></li>
                       </ul>
                 </nav>
               </div>
@@ -225,7 +225,8 @@ img.add_border {
 <p></p>
 <h4><span style="background-color: #99cc00; color: #000000;"><strong>week16</strong></span></h4>
 <p><span style="background-color: #99cc00; color: #000000;"></span>期末簡報製作，期末報告影片錄製‧</p>
-<p>學習重點整理</p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
+<p>學習重點整理</p>
+<br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
         
     <!-- footer -->
       <div class="container">
