--- a/content/期末報告.html
+++ b/content/期末報告.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a><li class='has-children'><a href='Ubuntu 20.04 Virtualbox.html'>Ubuntu 20.04 Virtualbox</a><ul class='dropdown'><li><a href='問題解決.html'>問題解決</a></li></li></ul></ul><li><a href='期末報告.html'>期末報告</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Mechatronic Project.html'>Mechatronic Project</a><ul class='dropdown'><li class='has-children'><a href='onshape.html'>onshape</a><ul class='dropdown'><li><a href='第二版車殼.html'>第二版車殼</a></li></ul><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a><li class='has-children'><a href='Ubuntu 20.04 Virtualbox.html'>Ubuntu 20.04 Virtualbox</a><ul class='dropdown'><li><a href='問題解決.html'>問題解決</a></li></li></ul></ul><li><a href='期末報告.html'>期末報告</a></li>
                       </ul>
                 </nav>
               </div>
@@ -157,7 +157,10 @@ img.add_border {
     <div id="tipue_search_content">問題解決 << <a href='問題解決.html'>Previous</a> <br /><h1>期末報告</h1>
 <p>期末成果影片展示</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/V1RWQjCkLT0" width="560"></iframe></p>
-<p>紀錄40723147在CD2020 <yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">協同產品設計實習的所學</yt-formatted-string></p></div></div></div><br />問題解決 << <a href='問題解決.html'>Previous</a> </div>
+<p>紀錄40723147在CD2020 <yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">協同產品設計實習的所學</yt-formatted-string></p>
+</div>
+</div>
+</div><br />問題解決 << <a href='問題解決.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
