--- a/config/content.htm
+++ b/config/content.htm
@@ -387,6 +387,7 @@ print(group[36:49])</pre>
 <p>可以藉由已經完成的四輪越野車來修改其外觀及配備，</p>
 <p>所以有了第二次模型的設計‧</p>
 <p><img alt="" height="442" src="/images/13.可當底.png" width="800"/></p>
+<p>設計流程簡介影片:<br/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qtXdIHNT9bs" width="560"></iframe></p>
 <p>設計流程:</p>
 <p>1.設計模型最大限度</p>
 <p><img alt="" height="196" src="/images/3.車本體最大限度.png" width="400"/></p>
