--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -342,12 +342,13 @@ print(group[36:49])</pre>
 <p>假設一個產品的誕生需要經過機構、配電、程式、電資、外觀設計等流程‧</p>
 <p>若以過往的設計經驗來看需先由頭至尾一步一步經由每一位參與者的巧手下完成，</p>
 <p>在不發生不如意的情況下進行也至少需要花上好幾步的步驟來完成產品的設計‧</p>
+<p><img alt="" height="165" src="/images/A1.傳統設計流程.png" width="600"/></p>
 <h4><strong>協同產品設計</strong></h4>
 <p>協同產品設計可在同一個時間點將不同領域的人們聚集起來，</p>
 <p>各自發揮所長進行產品設計的流程，</p>
 <p>將以往需要一整串的步驟一一打破，</p>
 <p>且在更有效率的環境下進行溝通且完成最佳化設計‧</p>
-<p></p><h2>onshape</h2>
+<p><img alt="" height="610" src="/images/A2.協同設計流程.png" width="600"/></p><h2>onshape</h2>
 <h4><span style="background-color: #ffff00;"><strong>onshape:</strong></span><a href="https://cad.onshape.com">https://cad.onshape.com</a></h4>
 <p style="text-align: center;">線上免費3D建模平台，隨時隨地即可將腦中的想法實作出來‧</p>
 <p style="text-align: center;"><span style="background-color: #00ff00;">第一版模型</span></p>
