--- a/content/week.html
+++ b/content/week.html
@@ -226,7 +226,10 @@ img.add_border {
 <h4><span style="background-color: #99cc00; color: #000000;"><strong>week16</strong></span></h4>
 <p><span style="background-color: #99cc00; color: #000000;"></span>期末簡報製作，期末報告影片錄製‧</p>
 <p>學習重點整理</p>
-<br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
+<hr/><hr/>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week17</strong></span></h4>
+<p><span style="background-color: #99cc00; color: #000000;"></span>完成分組 Mechatronic Project 分配到的任務並且進行專案分析重點整理</p>
+<p>期末呈現投影片、最終資料彙整‧</p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
         
     <!-- footer -->
       <div class="container">
