update Virtualbox 操作影片(內外部連線)

--- a/content/Ubuntu 20.04 Virtualbox.html
+++ b/content/Ubuntu 20.04 Virtualbox.html
@@ -200,8 +200,13 @@ vi wsgi.py</pre>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">https://[2001:288:6004:17:2020:1::7147]:19443</pre>
 <p>為當初之設定port號有所對應</p>
 <p><img alt="" height="271" src="./../images/chrome_2020-06-03_12-24-28.png" width="500"/></p>
-<p>不過無法連接需要再加以研究</p>
-<br />Google + Domain API << <a href='Google + Domain API.html'>Previous</a> <a href='問題解決.html'>Next</a> >> 問題解決</div>
+<p><span style="text-decoration: line-through;">不過無法連接需要再加以研究</span>(已發現問題並以解決)</p>
+<p>操作影片:</p>
+<p>在Ipv6下設定Virtualbox的網路連線;</p>
+<p>並且設定port號使虛擬主機內部外部可以連通;</p>
+<p>以下影片有完整的內容操作</p>
+<p>用到的指令以上皆有紀載</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4X2ushF3g0w" width="560"></iframe></p><br />Google + Domain API << <a href='Google + Domain API.html'>Previous</a> <a href='問題解決.html'>Next</a> >> 問題解決</div>
         
     <!-- footer -->
       <div class="container">
