--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -77,7 +77,10 @@
 <h4><span style="background-color: #99cc00; color: #000000;"><strong>week16</strong></span></h4>
 <p><span style="background-color: #99cc00; color: #000000;"></span>期末簡報製作，期末報告影片錄製‧</p>
 <p>學習重點整理</p>
-<h1>課堂筆記</h1>
+<hr/><hr/>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week17</strong></span></h4>
+<p><span style="background-color: #99cc00; color: #000000;"></span>完成分組 Mechatronic Project 分配到的任務並且進行專案分析重點整理</p>
+<p>期末呈現投影片、最終資料彙整‧</p><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
